--- a/app/css/main.css
+++ b/app/css/main.css
@@ -20,3 +20,10 @@ body {
     z-index:100;
     display: block;
 }
+
+input[type=text]{
+	width: 100%;
+	border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
